--- a/WageCalculatorFrontend/src/styles/_variables.scss
+++ b/WageCalculatorFrontend/src/styles/_variables.scss
@@ -2,5 +2,6 @@
 $primary-color: #007BFF;
 $secondary-color: #6C757D;
 $background-color: #f9f9f9;
+$colour-light: #fff;
 $text-color: #333;
 $border-color: #ccc;
