--- a/WageCalculatorFrontend/src/app/components/banner-component/banner.component.scss
+++ b/WageCalculatorFrontend/src/app/components/banner-component/banner.component.scss
@@ -2,7 +2,7 @@
 
 .banner {
   background-color: $primary-color; 
-  color: #fff;
+  color: $colour-light;
   padding: 20px;
   text-align: center;
   border-radius: 8px 8px 0 0;
