--- a/WageCalculatorFrontend/src/app/components/dialogs/success-dialog/success-dialog.component.html
+++ b/WageCalculatorFrontend/src/app/components/dialogs/success-dialog/success-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-container">
   <h2 mat-dialog-title>Success</h2>
   <mat-dialog-content>
-    <p>Your time rule has been added successfully!</p>
+    <p>{{ successMessage }}</p>
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-button (click)="onOk()">OK</button>
