--- a/WageCalculatorFrontend/src/app/components/widgets/days-widget/days-widget.component.scss
+++ b/WageCalculatorFrontend/src/app/components/widgets/days-widget/days-widget.component.scss
@@ -8,7 +8,7 @@
   height: auto;
   min-width: 300px;
   
-  .time-rule-select
+  .days-headder
   {
     padding-top: 20px;
   }
@@ -18,78 +18,6 @@
     margin-bottom: 10px;
     font-weight: bold;
     font-size: large;
-  }
-
-   .custom-dropdown {
-    position: relative;
-
-    .dropdown-button {
-      width: 90%;
-      padding: 15px;
-      background-color: $primary-color;
-      color: $colour-light;
-      border: none;
-      border-radius: 5px;
-      text-align: left;
-      cursor: pointer;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      transition: background-color 0.3s;
-
-      &:hover {
-        background-color: darken($primary-color, 10%);
-      }
-    }
-
-    .dropdown-options {
-      width: 90%;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      right: 0;
-      background-color: $colour-light;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-      border-radius: 5px;
-      z-index: 1000;
-      max-height: 250px;
-      overflow-y: auto;
-      margin: 0% 5% 0% 5%;
-
-      .dropdown-option {
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-        cursor: pointer;
-
-        &:hover {
-          background-color: #f1f1f1;
-        }
-
-        .option-field {
-          flex: 1;
-          padding: 0 5px; 
-          text-align: center;
-        }
-      }
-
-      .dropdown-header
-      {
-        position: sticky;
-        top: 0;
-        background-color: $background-color;
-        z-index: 1;
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-        border-bottom: 2px solid $border-color;
-
-        .header-field
-        {
-          flex: 1;
-          padding: 0 5px; 
-          text-align: center;
-        }
-      }
-    }
   }
 
   .button-container
@@ -176,11 +104,57 @@
         color: #555;
         margin-top: 5px;
         padding: 5px;
-        border: 1px solid $border-color;
+        border: 1px solid #ddd;
         border-radius: 4px;
         background-color: $background-color;
       }
     }
-  }  
+  }
+
+  .days-list {
+    width: 90%;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: $background-color;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    z-index: 1000;
+    max-height: 300px;
+    overflow-y: auto;
+    margin: 0% 5% 0% 5%;
+
+    .day {
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      cursor: pointer;
+
+      .day-field {
+        flex: 1;
+        padding: 0 5px; 
+        text-align: center;
+      }
+    }
+
+    .days-header
+    {
+      position: sticky;
+      top: 0;
+      background-color: $background-color;
+      z-index: 1;
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 2px solid $border-color;
+
+      .day-field
+      {
+        flex: 1;
+        padding: 0 5px; 
+        text-align: center;
+      }
+    }
+  }
 }
 
