--- a/WageCalculatorFrontend/src/app/components/widgets/time-rule-widget/time-rule-widget.component.html
+++ b/WageCalculatorFrontend/src/app/components/widgets/time-rule-widget/time-rule-widget.component.html
@@ -56,8 +56,8 @@
   }
 
   <div class="button-container">
-    <a class="button">
-      <mat-icon (click)="openDialog()" class="icon col-xs-12">add_box</mat-icon>
+    <a class="button" (click)="openDialog()">
+      <mat-icon class="icon col-xs-12">add_box</mat-icon>
       <span class="add-text">Add new time rule</span>
     </a>
   </div>
