--- a/WageCalculatorFrontend/src/app/components/dialogs/new-day-dialog/new-day-dialog.component.html
+++ b/WageCalculatorFrontend/src/app/components/dialogs/new-day-dialog/new-day-dialog.component.html
@@ -5,12 +5,12 @@
   
       <mat-form-field appearance="fill">
         <mat-label>Start Time</mat-label>
-        <input matInput type="number" [(ngModel)]="day.workStartTime" placeholder="Enter regular start time" required min="0" max="24">
+        <input matInput type="number" [(ngModel)]="day.start" placeholder="Enter regular start time" required min="0" max="24">
       </mat-form-field>
   
       <mat-form-field appearance="fill">
         <mat-label>End Time</mat-label>
-        <input matInput type="number" [(ngModel)]="day.workEndTime" placeholder="Enter night time start time" required min="0" max="24">
+        <input matInput type="number" [(ngModel)]="day.end" placeholder="Enter night time start time" required min="0" max="24">
       </mat-form-field>
   
       @if(!validateTimes()) {
