--- a/WageCalculatorFrontend/src/app/components/widgets/days-widget/days-widget.component.html
+++ b/WageCalculatorFrontend/src/app/components/widgets/days-widget/days-widget.component.html
@@ -27,7 +27,7 @@
   <div class="button-container">
     <a (click)="openDialog()" class="button">
       <mat-icon  class="icon col-xs-12">add_box</mat-icon>
-      <span class="add-text">Add new day</span>
+      <span class="add-text">Add day</span>
     </a>
   </div>
   
