--- a/WageCalculatorFrontend/src/app/components/widgets/time-rule-widget/time-rule-widget.component.html
+++ b/WageCalculatorFrontend/src/app/components/widgets/time-rule-widget/time-rule-widget.component.html
@@ -58,7 +58,7 @@
   <div class="button-container">
     <a class="button" (click)="openDialog()">
       <mat-icon class="icon col-xs-12">add_box</mat-icon>
-      <span class="add-text">Add new time rule</span>
+      <span class="add-text">Add time rule</span>
     </a>
   </div>
   
