--- a/WageCalculatorFrontend/src/app/components/widgets/days-widget/days-widget.component.html
+++ b/WageCalculatorFrontend/src/app/components/widgets/days-widget/days-widget.component.html
@@ -1,5 +1,5 @@
 <div class="dropdown-container">
-  <label class="days-headder">Input days and hours worked</label>
+  <label class="days-headder">Input days and hours worked:</label>
 
   <div class="days-list">
     <div class="days-header">
